tests/script/negative/typecheck/dead-code-3.s
@initial
init() {
  transitionTo(@a);
}

@a
loop() {
  transitionTo(@a);
  terminate(); // never reachable
}
